Adjusting folder and update home

--- a/index.html
+++ b/index.html
@@ -1,11 +1,63 @@
 <!doctype html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0;" user-scalable="0;">
 
-    </head>
-    <body>
-        
-    </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0;" user-scalable="0;">
+	<link rel="stylesheet" href="css/style.css">
+	<title>Bruno de Moraes</title>
+</head>
+
+<body>
+
+	<!-- HEADING AREA -->
+	<!-- TODO: add images and  -->
+	<head>
+		<!-- BRANDING -->
+		<section>
+			<picture>
+				<!-- MOBILE -->
+				<source>
+				<!-- TABLET -->
+				<source>
+				<!-- DESKTOP / FALLBACK -->
+				<img src="" alt="">
+			</picture>
+			<section>
+				<h1>Bruno de Moraes</h1>
+				<p>Front-End Devevoper</p>
+			</section>
+		</section>
+		<!-- NAVIGATION MENU -->
+		<nav>
+			<ul>
+				<li>Home</li>
+				<li>Quem sou</li>
+				<li>Contato</li>
+			</ul>
+		</nav>
+	</head>
+	<!-- MAIN CONTENT -->
+	<main>
+		<section id="home">
+			<!-- Main Picture -->
+			<figure>
+				<picture>
+					<!-- mobile img -->
+					<source>
+					<!-- tablet img  -->
+					<source>
+						<!-- desktop / fallback -->
+					<img src="" alt="">
+				</picture>
+			</figure>
+
+			<section>
+
+			</section>
+
+		</section>
+	</main>
+
+</body>
 </html>
