Code review fixing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0;" user-scalable="0;">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0;">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
 	<!-- FAV ICON -->
@@ -20,8 +20,8 @@
 	<header>
 		<!-- BRANDING -->
 		<picture class="header-branding">
-			<source media="(min-width: 320px)" srcset="img/logo_93x45px.png">
-			<img src="" alt="L4IT logo">
+			<source media="(min-width: 320px)" srcset="./img/logo_93x45px.png">
+			<img src="./img/logo_93x45px.png" alt="L4IT logo">
 		</picture>
 
 		<section class="info-header">
@@ -34,7 +34,7 @@
 
 	<!-- Main Content -->
 	<main>
-		<article id="home">
+		<section id="home">
 			<!-- Main Picture -->
 			<a href="https://github.com/brunoslash76" target="_blank">
 				<figure class="figure-wrapper">
@@ -46,14 +46,14 @@
 						<!-- tablet img  -->
 						<source media="(min-width: 768px)" srcset="./img/main_1024w.jpg">
 						<!-- desktop / fallback -->
-						<img class="main-image" src="" alt="">
+						<img class="main-image" src="./img/main_1024w.jpg" alt="It's rainning green code on a black background">
 					</picture>
 					<figcaption class="overlay-caption">
-						Know more about Bruno's code
+						<h5>>Know more about Bruno's code</h5>
 					</figcaption>
 				</figure>
 			</a>
-		</article>
+		</section>
 
 		<!-- FEATURED WORK -->
 		<section>
@@ -75,7 +75,7 @@
 								<!-- Tablet -->
 								<source media="(min-width: 768px)" srcset="./img/photography-dstp.jpg">
 								<!-- Desktop -->
-								<img class="img-responsive shadow" src="" alt="A hand holding a camera, in the background huge green rocky mountains">
+								<img class="img-responsive shadow" src="./img/photography-dstp.jpg" alt="A hand holding a camera, in the background huge green rocky mountains">
 							</picture>
 							<figcaption class="overlay-caption">
 								See more pictures...
@@ -96,7 +96,7 @@
 								<!-- Tablet -->
 								<source media="(min-width: 768px)" srcset="./img/sports_car_dstp.jpg">
 								<!-- Desktop -->
-								<img class="img-responsive shadow" src="" alt="The front of a orange sport's car">
+								<img class="img-responsive shadow" src="./img/sports_car_dstp.jpg" alt="The front of a orange sport's car">
 							</picture>
 							<figcaption class="overlay-caption">
 								See more pictures...
@@ -108,15 +108,14 @@
 				<!-- SOUNDCLOUD -->
 				<figure class="float-music-player">
 					<h3>Bruno's songs</h3>
-					<iframe class="soundcloud-vp shadow shadow-float" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/88239969&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+					<iframe class="soundcloud-vp shadow shadow-float" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/88239969&color=%23ff5500&auto_play=false&hide_related=true&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
 					</iframe>
 				</figure>
 
 				<!-- Video -->
 				<figure class="full-row">
 					<h3>My videos</h3>
-					<iframe width="100%" height="315" src="https://www.youtube.com/embed/ioRO-QNsDpU" frameborder="0" allow="autoplay; encrypted-media"
-					 allowfullscreen></iframe>
+					<iframe src="https://www.youtube.com/embed/ioRO-QNsDpU" allowfullscreen></iframe>
 				</figure>
 			</section>
 		</section>
